// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditorialHeroCard > matches snapshot 1`] = `
"<html lang="en"><head><meta charSet="utf-8"/><link rel="preload" as="image" href="https://example.com/bg.jpg"/><link rel="preload" as="image" href="https://example.com/logo.png"/><style>
    
    

    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }

    html, body {
      width: 1200px;
      height: 675px;
      overflow: hidden;
    }

    .root {
      position: relative;
      width: 1200px;
      height: 675px;
      background: #1A1A1A;
      overflow: hidden;
    }

    .bg {
      position: absolute;
      inset: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    .gradient-panel {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 696px;
      height: 351px;
      background: linear-gradient(135deg, rgba(26, 26, 26, 0.6) 0%, rgba(0,0,0,0) 100%);
    }

    .logo {
      position: absolute;
      top: 36px;
      right: 36px;
      width: 165px;
      height: 47px;
      object-fit: contain;
      object-position: right center;
    }

    .text-block {
      position: absolute;
      bottom: 36px;
      left: 36px;
      max-width: 648px;
      max-height: 279px;
      overflow: hidden;
      display: flex;
      flex-direction: column;
      gap: 16px;
    }

    h2 {
      font-family: "Georgia", Georgia, serif;
      font-size: 51px;
      font-weight: 700;
      color: #FFFFFF;
      line-height: 1.05;
      letter-spacing: -0.02em;
      display: -webkit-box;
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
      overflow: hidden;
    }

    .subtext {
      font-family: "system-ui", system-ui, sans-serif;
      font-size: 17px;
      font-weight: 400;
      color: #FFFFFF;
      opacity: 0.78;
      line-height: 1.6;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      overflow: hidden;
    }

    .credit {
      font-family: "system-ui", system-ui, sans-serif;
      font-size: 12px;
      font-weight: 500;
      color: #D4A574;
      letter-spacing: 0.08em;
      text-transform: uppercase;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  </style></head><body><div class="root"><img class="bg" src="https://example.com/bg.jpg" alt=""/><div class="gradient-panel"></div><img class="logo" src="https://example.com/logo.png" alt=""/><div class="text-block"><h2>The Future of Content Marketing</h2><p class="subtext">How AI is reshaping brand storytelling in 2025</p></div></div></body></html>"
`;

exports[`QuoteCard > matches snapshot 1`] = `
"<html lang="en"><head><meta charSet="utf-8"/><link rel="preload" as="image" href="https://example.com/bg.jpg"/><link rel="preload" as="image" href="https://example.com/logo.png"/><style>
    
    

    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }

    html, body {
      width: 1200px;
      height: 675px;
      overflow: hidden;
    }

    .root {
      position: relative;
      width: 1200px;
      height: 675px;
      display: flex;
      align-items: center;
      justify-content: center;
      background: #1A1A1A;
      overflow: hidden;
    }

    .bg {
      position: absolute;
      inset: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    .overlay {
      position: absolute;
      inset: 0;
      background: linear-gradient(
        180deg,
        #1A1A1ACC 0%,
        #1A1A1AEE 100%
      );
    }

    .logo {
      position: absolute;
      top: 37px;
      right: 37px;
      width: 165px;
      height: 47px;
      object-fit: contain;
      object-position: right center;
    }

    .content {
      position: relative;
      display: flex;
      flex-direction: column;
      align-items: center;
      gap: 20px;
      padding: 74px 37px;
      max-width: 936px;
      text-align: center;
    }

    .decor {
      font-family: "Georgia", Georgia, serif;
      font-size: 122px;
      font-weight: 300;
      color: #D4A574;
      line-height: 0.7;
      opacity: 0.5;
      align-self: flex-start;
    }

    h3 {
      font-family: "Georgia", Georgia, serif;
      font-size: 37px;
      font-weight: 300;
      color: #FFFFFF;
      line-height: 1.3;
      letter-spacing: -0.01em;
    }

    .attribution {
      font-family: "system-ui", system-ui, sans-serif;
      font-size: 14px;
      font-weight: 500;
      color: #D4A574;
      letter-spacing: 0.08em;
      text-transform: uppercase;
      opacity: 0.9;
    }
  </style></head><body><div class="root"><img class="bg" src="https://example.com/bg.jpg" alt=""/><div class="overlay"></div><img class="logo" src="https://example.com/logo.png" alt=""/><div class="content"><span class="decor" aria-hidden="true">“</span><h3>Creativity is intelligence having fun.</h3><p class="attribution">— Albert Einstein</p></div></div></body></html>"
`;
